# helicopter

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Actuator.hpp  CMakeLists.txt  Clock.hpp  MotionControl.hpp  README.md  Serial.hpp  Tupfile  Tupgen.sh  Tuprules.tup  ac.cpp  app.cmake  events.hpp  global.hpp  main.cpp  make-helper.sh  make-syrup.sh  rules.mk  settings.hpp  tup.config  tupgen.sh  types.hpp
Observer/: CMakeLists.txt  Observer.cpp  Observer.hpp  gps.cpp  gps.hpp
ac/: Serial.hpp  Tuprules.tup  make-syrup.sh  rules.mk  serialtest.cpp
actuator/: API.hpp  Actuator.hpp  CMakeLists.txt  implementation.hpp  instantiation.cpp
apps/: .gitignore  Tuprules.tup  app.cmake  tupgen.sh
atmega328/: Makefile  main.c
clock/: API.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp
com/: CMakeLists.txt  CameraControlSignal.hpp  EigenMessage.hpp  ImageProcessorMessages.hpp  Maple.hpp  MapleInstantiation.cpp  MapleMessages.hpp  MotionControlSignal.hpp  Stm.hpp  StmInstantiation.cpp  StmInstantiation.hpp  StmMessages.hpp
configs/: helisim.config  imuprint.config  tests.config
globalplanner/: GlobalPlanner.cpp  GlobalPlanner.hpp
helicopter/: CMakeLists.txt
localplanner/: API.hpp  CMakeLists.txt  LocalPlanner.cpp  LocalPlanner.hpp
logger/: CMakeLists.txt  Logger.hpp  implementation.hpp
maple/: ac.cpp
math/: CMakeLists.txt  algorithm.hpp  base.hpp  constants.hpp  control.hpp  controldifferentiation.hpp  differentiation.hpp  filtering.hpp  models.hpp  statedifferentiation.hpp  states.hpp  statistics.cpp  statistics.hpp
math/tests/: CMakeLists.txt  ConstantVelocityModelTests.cpp  DifferentiationTests.cpp  EKFTests.cpp  LqTests.cpp  PFPlot.cpp  ParticleFilterTests.cpp
math/tests/sys/: settings.hpp
motioncontrol/: API.hpp  CMakeLists.txt  MotionControl.hpp  implementation.hpp  instantiation.cpp
observer/: API.hpp  CMakeLists.txt  Observer.hpp  gps.cpp  gps.hpp  implementation.hpp  instantiation.cpp  observer.cpp
particlefilter/: API.hpp  CMakeLists.txt  ParticleFilter.hpp  implementation.cpp  particlefilter.cpp
referencegenerator/: CMakeLists.txt  ReferenceGenerator.hpp  implementation.hpp
sensorhub/: API.hpp  CMakeLists.txt  Sensorhub.hpp
servotest/: CMakeLists.txt
simulator/: API.hpp  CMakeLists.txt  Simulator.hpp  implementation.hpp  instantiation.cpp
states/: API.hpp  CMakeLists.txt  Firefighter.cpp  Firefighter.hpp  Flying.hpp  Helicopter.cpp  Idle.hpp  ImuTest1.hpp  ImuTest2.hpp  Init.hpp  OnTheGround.hpp  Stop.hpp  Top.cpp  Top.hpp  events.hpp  states.cpp
sys/: README.md  Tupfile  events.hpp  tupgen.sh  types.hpp
tests/: ActuatorTests.cpp  (+5 more)
(+285 files in other folders)
