add_subdirectory(.. math)
include_directories(${CMAKE_CURRENT_LIST_DIR})

make_test(DifferentiationTests)
make_test(ConstantVelocityModelTests)
target_link_libraries(ConstantVelocityModelTests)
make_test(EKFTests)
target_link_libraries(EKFTests)
make_test(LqTests)
target_link_libraries(LqTests)
make_test(ParticleFilterTests)
target_link_libraries(ParticleFilterTests)

add_executable(PFPlot PFPlot.cpp)
target_link_libraries(PFPlot pthread cpplot boost_system)
